[package]
name = "rusty-term-cli"
version = "0.1.0"
edition = "2021"
author = "Residuum22"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crates to get tokio_serial example to work.
tokio-serial = "5.4.1"
tokio = { version = "1.18.0", features = ["full", "io-util"] }
futures = "0.3.21"
tokio-util = { version = "0.6.3", features = ["codec"] }
bytes = "1.1.0"