[package]
name = "rusty-term-cli"
version = "0.1.0"
edition = "2021"
author = "Residuum22"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
log = "0.4"
serialport = "4.7"
simple_logger = "5.0"
clap = { version = "4.5", features = ["derive"] }
